<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/hosteleria"
        android:title="@string/hosteleria"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/hoteles"
        android:title="@string/hoteles"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/ocio"
        android:title="@string/ocio"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/interes"
        android:title="@string/puntosInteres"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/transportes"
        android:title="@string/transportes"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/sanidad"
        android:title="@string/sanidad"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
</menu>