<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_actibity21"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.avt.gestorvacunas.Activity.LoginActivity"
        android:background="@drawable/background_with_icon">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/idUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/nick"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idUsuario">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:hint="@string/contrasena"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/contrasena"
                android:background="@drawable/custom_button"
                android:textAlignment="center"
                android:text="@string/login"
                android:onClick="login"/>
            <TextView
                android:id="@+id/registrar"
                android:text="@string/registrar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:gravity="center"
                android:onClick="registrar"
                android:textColor="#0846ff"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>


