<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.travelmaster.Fragment.CrearLugarFragment"
    android:background="@drawable/background_with_noicon">
    <Button
        android:id="@+id/botonCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/crearLugar"
        android:background="@drawable/custom_button"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botonCrear">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imagenLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_weight="1"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <EditText
                    android:id="@+id/nombreLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/nombreLugar"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/descripcionLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcionLugar"
                    android:maxLength="100"
                    android:layout_weight="0.5"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/locationNewLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#939393"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/categoria"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
