<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.travelmaster.Fragment.CrearReviewFragment"
    android:background="@drawable/background_with_noicon">
    <Button
        android:id="@+id/botonCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/crearReview"
        android:background="@drawable/custom_button"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botonCrear">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <EditText
                    android:id="@+id/nombreReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:hint="@string/nombreReview"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/descripcionReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcionReview"
                    android:maxLength="100"
                    android:layout_weight="0.5"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.1">
                <CheckBox
                    android:id="@+id/valoracion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/valoraciones_review"/>
                <CheckBox
                    android:id="@+id/valoracion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/valoraciones_review"/>
                <CheckBox
                    android:id="@+id/valoracion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/valoraciones_review"/>
                <CheckBox
                    android:id="@+id/valoracion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/valoraciones_review"/>
                <CheckBox
                    android:id="@+id/valoracion5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@drawable/valoraciones_review"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
